Tapşiriq həll edildi

--- a/Task_01_Python/Fatima_Aliyeva_Python_Backend_Task_01.ipynb
+++ b/Task_01_Python/Fatima_Aliyeva_Python_Backend_Task_01.ipynb
@@ -258,18 +258,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ltkt3t-G_dlq",
-        "outputId": "b8374f5f-d96e-4e86-e058-a5b9a2442c00"
+        "outputId": "fd8189cf-15f1-4b32-e809-84d8faaedca5"
       },
       "source": [
         "#stringSearch(word) adında bir metod yazın. daxil edilən sözün mətnin içində olub olmadığını ekrana çap edən metod yazın\n",
         "#Verilən str='Proqramalaşdırma nə qədər çox şey bildiyinizlə yox, bildiyinizlə ortaya çıxardığınız işlərlə maraqlanır.\n",
         "str='Proqramalaşdırma nə qədər çox şey bildiyinizlə yox, bildiyinizlə ortaya çıxardığınız işlərlə maraqlanır'\n",
-        "if \"n\" in str:\n",
+        "if \"ortaya\" in str:\n",
         "  print(\"Daxildi\")\n",
         "else:\n",
         "  print(\"Daxil deyil\")"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
